Updated CLI after changes in CasualInfo from jca